<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="hello">Hello World, DndCharsheetActivity!</string>
    <string name="app_name">DndCharsheet</string>
    <string name="character_name">Character Name</string>
    <string name="skill">Skill</string>
    <string name="skill_ability">Key Ab.</string>
    <string name="skill_modifier">Modifier</string>
    <string name="ability_modifier">Ability Modifier</string>
    <string name="skill_ranks">Ranks</string>
    <string name="skill_misc">Misc Mod.</string>
    <string name="skill_untrained">Untrained</string>
    <string name="skill_acp1">ArmorCheck Plty.</string>
    <string name="skill_acp2">acp2</string>
    <string name="alpha_warning">"NOTE: This application is still in heavy development. Most of the features are not yet implemented. I've only published on the market for easy installation, and for the curious!"</string>
    <string name="size">Size</string>
    <string name="age">Age</string>
    <string name="gender">Gender</string>
    <string name="hitpoints">Hit Points</string>
    <string name="minus5">-5</string>
    <string name="minus1">-1</string>
    <string name="plus1">+1</string>
    <string name="plus5">+5</string>
    <string name="temp_hp">Temporary Hitpoints</string>
    <string name="heal_all">Heal all</string>
    <string name="armor_class">Armor Class</string>
    <string name="unknown">unknown</string>
    <string name="touch_armor_class">Armor Class (Touch)</string>
    <string name="flat_footed_ac">Armor Class (Flat-Footed)</string>
    <string name="initiative">Initiative</string>
    <string name="nonlethal_damage">Nonlethal Damage</string>
    <string name="remove_all">Remove all</string>
    <string name="quick_stats">Quick Stats</string>
    <string name="saving_throws">Saving Throws</string>
    <string name="fortitude">Fortitude</string>
    <string name="reflex">Reflex</string>
    <string name="will">Will</string>
    <string name="damage_reduction">Damage Reduction</string>
    <string name="speed">Speed</string>
    <string name="weapons">Weapons</string>
    <string name="attack">Attack</string>
    <string name="attack_bonus">Attack Bonus</string>
    <string name="damage">Damage</string>
    <string name="critical">Critical</string>
    <string name="range">Range</string>
    <string name="type">Type</string>
    <string name="notes">Notes</string>
    <string name="weapon">Weapon</string>
    <string name="armor">Armor/Protective Item</string>
    <string name="armor_rating">Armor Rating</string>
    <string name="check_penalty">Check Penalty</string>
    <string name="max_dex">Max Dex</string>
    <string name="spell_failure">Spell Failure</string>
    <string name="weight">Weight</string>
    <string name="classes">Classes</string>
    <string name="race">Race</string>
    <string name="level">Level</string>
    <string name="player">Player</string>
    <string name="alignment">Alignment</string>
    <string name="deity">Deity</string>
    <string name="height">Height</string>
    <string name="eyes">Eyes</string>
    <string name="hair">Hair</string>
    <string name="strength">Strength</string>
    <string name="dexterity">Dexterity</string>
    <string name="constitution">Constitution</string>
    <string name="intelligence">Intelligence</string>
    <string name="wisdom">Wisdom</string>
    <string name="charisma">Charisma</string>
</resources>
