<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:orientation="vertical"
  android:layout_width="match_parent"
  android:layout_height="match_parent">
    <TextView android:textAppearance="?android:attr/textAppearanceLarge" android:id="@+id/textView1" android:layout_height="wrap_content" android:layout_width="match_parent" android:gravity="center" android:text="@string/alpha_warning" android:textColor="#ffff00"></TextView>
    <LinearLayout android:id="@+id/linearLayout1" android:layout_width="match_parent" android:layout_height="wrap_content" android:weightSum="1">
        <LinearLayout android:id="@+id/linearLayout2" android:layout_width="wrap_content" android:orientation="vertical" android:layout_height="match_parent" android:paddingLeft="5dp" android:paddingRight="5dp" android:layout_weight="0.5">
            <TextView android:layout_width="match_parent" android:id="@+id/textView2" android:layout_height="wrap_content" android:text="@string/quick_stats" android:gravity="center" android:textAppearance="?android:attr/textAppearanceLarge"></TextView>
            <TableLayout android:id="@+id/tableLayout1" android:layout_width="wrap_content" android:layout_height="wrap_content">
                <TableRow android:id="@+id/tableRow1" android:layout_height="wrap_content" android:layout_width="wrap_content">
                    <TextView android:id="@+id/lblHp" android:layout_width="wrap_content" android:text="@string/hitpoints" android:layout_height="wrap_content"></TextView>
                    <EditText android:gravity="right" android:layout_width="wrap_content" android:inputType="numberSigned" android:id="@+id/edtHp" android:layout_height="wrap_content">
                        <requestFocus></requestFocus>
                    </EditText>
                    <Button android:text="@string/minus5" android:id="@+id/btnHpMinus5" android:layout_width="wrap_content" android:layout_height="wrap_content"></Button>
                    <Button android:text="@string/minus1" android:id="@+id/btnHpMinus1" android:layout_width="wrap_content" android:layout_height="wrap_content"></Button>
                    <Button android:text="@string/plus1" android:id="@+id/btnHpPlus1" android:layout_width="wrap_content" android:layout_height="wrap_content"></Button>
                    <Button android:text="@string/plus5" android:id="@+id/btnHpPlus5" android:layout_width="wrap_content" android:layout_height="wrap_content"></Button>
                    <Button android:text="@string/heal_all" android:id="@+id/btnHealAllHp" android:layout_width="wrap_content" android:layout_height="wrap_content"></Button>
                </TableRow>
                <TableRow android:id="@+id/tableRow2" android:layout_height="wrap_content" android:layout_width="match_parent">
                    <TextView android:id="@+id/lblTmpHp" android:layout_width="wrap_content" android:text="@string/temp_hp" android:layout_height="wrap_content"></TextView>
                    <EditText android:gravity="right" android:layout_width="wrap_content" android:inputType="numberSigned" android:id="@+id/edtTmpHp" android:layout_height="wrap_content"></EditText>
                    <Button android:text="@string/minus5" android:id="@+id/btnTmpHpMinus5" android:layout_width="wrap_content" android:layout_height="wrap_content"></Button>
                    <Button android:text="@string/minus1" android:id="@+id/btnTmpHpMinus1" android:layout_width="wrap_content" android:layout_height="wrap_content"></Button>
                    <Button android:text="@string/plus1" android:id="@+id/btnTmpHpPlus1" android:layout_width="wrap_content" android:layout_height="wrap_content"></Button>
                    <Button android:text="@string/plus5" android:id="@+id/btnTmpHpPlus5" android:layout_width="wrap_content" android:layout_height="wrap_content"></Button>
                    <Button android:text="@string/remove_all" android:id="@+id/btnRemoveAllTmpHp" android:layout_width="wrap_content" android:layout_height="wrap_content"></Button>
                </TableRow>
                <TableRow android:id="@+id/tableRow7" android:layout_height="wrap_content" android:layout_width="wrap_content">
                    <TextView android:id="@+id/lblNonlethalDamage" android:layout_width="wrap_content" android:text="@string/nonlethal_damage" android:layout_height="wrap_content"></TextView>
                    <EditText android:gravity="right" android:layout_width="wrap_content" android:inputType="numberSigned" android:id="@+id/edtNonlethalDamage" android:layout_height="wrap_content"></EditText>
                    <Button android:text="@string/minus5" android:id="@+id/btnNonlethalDamageMinus5" android:layout_width="wrap_content" android:layout_height="wrap_content"></Button>
                    <Button android:text="@string/minus1" android:id="@+id/btnNonlethalDamageMinus1" android:layout_width="wrap_content" android:layout_height="wrap_content"></Button>
                    <Button android:text="@string/plus1" android:id="@+id/btnNonlethalDamagePlus1" android:layout_width="wrap_content" android:layout_height="wrap_content"></Button>
                    <Button android:text="@string/plus5" android:id="@+id/btnNonlethalDamagePlus5" android:layout_width="wrap_content" android:layout_height="wrap_content"></Button>
                    <Button android:text="@string/heal_all" android:id="@+id/btnHealAllNonlethal" android:layout_width="wrap_content" android:layout_height="wrap_content"></Button>
                </TableRow>
            </TableLayout>
        </LinearLayout>
        <LinearLayout android:id="@+id/linearLayout3" android:layout_width="wrap_content" android:layout_height="match_parent" android:orientation="vertical" android:paddingLeft="5dp" android:paddingRight="5dp" android:layout_weight="0.5">
            <TextView android:textAppearance="?android:attr/textAppearanceLarge" android:gravity="center" android:id="@+id/lblSavingThrows" android:layout_width="wrap_content" android:text="@string/saving_throws" android:layout_height="wrap_content"></TextView>
            <TableLayout android:id="@+id/tableLayout2" android:layout_height="match_parent" android:layout_width="match_parent">
                <TableRow android:id="@+id/tableRow8" android:layout_height="wrap_content" android:layout_width="wrap_content">
                    <TextView android:id="@+id/textView3" android:layout_width="wrap_content" android:text="@string/fortitude" android:layout_height="wrap_content" android:paddingLeft="2dp" android:paddingRight="2dp"></TextView>
                    <TextView android:id="@+id/txtFortSave" android:layout_width="wrap_content" android:text="@string/unknown" android:layout_height="wrap_content" android:gravity="right" android:paddingLeft="2dp" android:paddingRight="2dp" android:textAppearance="?android:attr/textAppearanceMedium"></TextView>
                    <EditText android:inputType="numberSigned" android:id="@+id/edtTempFort" android:layout_height="wrap_content" android:gravity="right" android:layout_width="match_parent"></EditText>
                </TableRow>
                <TableRow android:id="@+id/TableRow02" android:layout_height="wrap_content" android:layout_width="wrap_content">
                    <TextView android:id="@+id/TextView03" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/reflex" android:paddingLeft="2dp" android:paddingRight="2dp"></TextView>
                    <TextView android:layout_width="wrap_content" android:text="@string/unknown" android:layout_height="wrap_content" android:id="@+id/txtReflexSave" android:gravity="right" android:paddingLeft="2dp" android:paddingRight="2dp" android:textAppearance="?android:attr/textAppearanceMedium"></TextView>
                    <EditText android:layout_width="wrap_content" android:inputType="numberSigned" android:layout_height="wrap_content" android:id="@+id/edtTempReflex" android:gravity="right"></EditText>
                </TableRow>
                <TableRow android:id="@+id/TableRow01" android:layout_height="wrap_content" android:layout_width="wrap_content">
                    <TextView android:id="@+id/TextView01" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/will" android:paddingLeft="2dp" android:paddingRight="2dp"></TextView>
                    <TextView android:layout_width="wrap_content" android:text="@string/unknown" android:layout_height="wrap_content" android:id="@+id/txtWillSave" android:gravity="right" android:paddingLeft="2dp" android:paddingRight="2dp" android:textAppearance="?android:attr/textAppearanceMedium"></TextView>
                    <EditText android:layout_width="wrap_content" android:inputType="numberSigned" android:layout_height="wrap_content" android:id="@+id/edtTempWill" android:gravity="right"></EditText>
                </TableRow>
            </TableLayout>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout android:id="@+id/linearLayout4" android:layout_height="wrap_content" android:layout_width="match_parent" android:weightSum="1" android:layout_marginTop="10dp">
        <TableLayout android:layout_weight="0.5" android:layout_height="wrap_content" android:layout_width="match_parent" android:id="@+id/tableLayout3">
            <TableRow android:id="@+id/tableRow6" android:layout_height="wrap_content" android:layout_width="wrap_content">
                <TextView android:text="@string/initiative" android:id="@+id/lblInitiative" android:layout_height="wrap_content" android:layout_width="wrap_content"></TextView>
                <TextView android:textAppearance="?android:attr/textAppearanceLarge" android:text="@string/unknown" android:id="@+id/txtInitiative" android:gravity="right" android:layout_height="wrap_content" android:layout_width="wrap_content"></TextView>
            </TableRow>
            <TableRow android:id="@+id/tableRow3" android:layout_height="wrap_content" android:layout_width="wrap_content">
                <TextView android:text="@string/armor_class" android:id="@+id/lblAC" android:layout_height="wrap_content" android:layout_width="wrap_content"></TextView>
                <TextView android:textAppearance="?android:attr/textAppearanceMedium" android:text="@string/unknown" android:id="@+id/txtAC" android:gravity="right" android:layout_height="wrap_content" android:layout_width="wrap_content"></TextView>
            </TableRow>
            <TableRow android:id="@+id/tableRow4" android:layout_height="wrap_content" android:layout_width="wrap_content">
                <TextView android:text="@string/touch_armor_class" android:id="@+id/lblTouchAC" android:layout_height="wrap_content" android:layout_width="wrap_content"></TextView>
                <TextView android:textAppearance="?android:attr/textAppearanceMedium" android:text="@string/unknown" android:id="@+id/txtTouchAC" android:gravity="right" android:layout_height="wrap_content" android:layout_width="wrap_content"></TextView>
            </TableRow>
            <TableRow android:id="@+id/tableRow5" android:layout_height="wrap_content" android:layout_width="wrap_content">
                <TextView android:text="@string/flat_footed_ac" android:id="@+id/lblFFAc" android:layout_height="wrap_content" android:layout_width="wrap_content"></TextView>
                <TextView android:textAppearance="?android:attr/textAppearanceMedium" android:text="@string/unknown" android:id="@+id/txtFFAc" android:gravity="right" android:layout_height="wrap_content" android:layout_width="wrap_content"></TextView>
            </TableRow>
            <TableRow android:id="@+id/tableRow9" android:layout_height="wrap_content" android:layout_width="wrap_content">
                <TextView android:text="@string/damage_reduction" android:id="@+id/textView4" android:layout_height="wrap_content" android:layout_width="wrap_content"></TextView>
                <TextView android:textAppearance="?android:attr/textAppearanceMedium" android:text="@string/unknown" android:id="@+id/txtDamageReduction" android:gravity="right" android:layout_height="wrap_content" android:layout_width="wrap_content"></TextView>
            </TableRow>
            <TableRow android:id="@+id/TableRow03" android:layout_height="wrap_content" android:layout_width="wrap_content">
                <TextView android:text="@string/speed" android:id="@+id/TextView02" android:layout_height="wrap_content" android:layout_width="wrap_content"></TextView>
                <TextView android:textAppearance="?android:attr/textAppearanceMedium" android:text="@string/unknown" android:id="@+id/txtSpeed" android:gravity="right" android:layout_height="wrap_content" android:layout_width="wrap_content"></TextView>
            </TableRow>
        </TableLayout>
    </LinearLayout>
    <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content" android:id="@+id/linearLayout6">
        <LinearLayout android:orientation="vertical" android:layout_height="match_parent" android:layout_marginTop="10dp" android:id="@+id/linearLayout5" android:layout_weight="0.5" android:layout_width="0dp">
            <TextView android:layout_width="match_parent" android:textAppearance="?android:attr/textAppearanceMedium" android:id="@+id/textView5" android:text="@string/weapons" android:layout_height="wrap_content"></TextView>
            <ListView android:layout_height="match_parent" android:id="@+id/lstWeapons" android:layout_width="match_parent"></ListView>
        </LinearLayout>
        <LinearLayout android:layout_height="match_parent" android:id="@+id/linearLayout7" android:orientation="vertical" android:layout_weight="0.5" android:layout_marginTop="10dp" android:layout_width="0dp">
            <TextView android:layout_width="wrap_content" android:textAppearance="?android:attr/textAppearanceMedium" android:id="@+id/textView6" android:layout_height="wrap_content" android:text="@string/armor"></TextView>
            <ListView android:layout_height="wrap_content" android:layout_width="match_parent" android:id="@+id/lstArmor"></ListView>
        </LinearLayout>
    </LinearLayout>
    
</LinearLayout>
