<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:orientation="vertical"
  android:layout_width="match_parent"
  android:layout_height="match_parent">
    <TableLayout android:layout_height="wrap_content" android:layout_width="match_parent" android:id="@+id/tableLayout1">
        <TableRow android:id="@+id/tableRow1" android:layout_height="wrap_content" android:layout_width="match_parent">
            <TextView android:id="@+id/textView1" android:layout_height="wrap_content" android:paddingBottom="2dp" android:paddingLeft="5dp" android:paddingRight="5dp" android:paddingTop="2dp" android:layout_width="match_parent" android:text="@string/armor"></TextView>
            <TextView android:id="@+id/textView2" android:layout_height="wrap_content" android:paddingBottom="2dp" android:paddingLeft="5dp" android:paddingRight="5dp" android:paddingTop="2dp" android:layout_width="match_parent" android:text="@string/type"></TextView>
            <TextView android:id="@+id/textView3" android:layout_height="wrap_content" android:paddingBottom="2dp" android:paddingLeft="5dp" android:paddingRight="5dp" android:paddingTop="2dp" android:layout_width="match_parent" android:text="@string/armor_rating"></TextView>
        </TableRow>
        <TableRow android:id="@+id/tableRow1" android:layout_height="wrap_content" android:layout_width="match_parent">
            <TextView android:text="@string/unknown" android:layout_height="wrap_content" android:paddingLeft="5dp" android:paddingRight="5dp" android:paddingTop="2dp" android:paddingBottom="2dp" android:layout_width="match_parent" android:id="@+id/txtArmorName"></TextView>
            <TextView android:text="@string/unknown" android:layout_height="wrap_content" android:paddingLeft="5dp" android:paddingRight="5dp" android:paddingTop="2dp" android:paddingBottom="2dp" android:layout_width="match_parent" android:id="@+id/txtArmorType"></TextView>
            <TextView android:text="@string/unknown" android:layout_height="wrap_content" android:paddingLeft="5dp" android:paddingRight="5dp" android:paddingTop="2dp" android:paddingBottom="2dp" android:layout_width="match_parent" android:id="@+id/txtArmorRating"></TextView>
        </TableRow>
    </TableLayout>
    <TableLayout android:layout_height="wrap_content" android:layout_width="match_parent" android:id="@+id/tableLayout1">
        <TableRow android:id="@+id/tableRow1" android:layout_width="wrap_content" android:layout_height="wrap_content">
            <TextView android:id="@+id/textView6" android:layout_width="wrap_content" android:text="@string/notes" android:layout_height="wrap_content" android:paddingBottom="2dp" android:paddingLeft="5dp" android:paddingRight="5dp" android:paddingTop="2dp"></TextView>
        </TableRow>
        <TableRow android:id="@+id/tableRow1" android:layout_width="wrap_content" android:layout_height="wrap_content">
            <TextView android:id="@+id/txtNotes" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/unknown" android:paddingBottom="2dp" android:paddingLeft="5dp" android:paddingRight="5dp" android:paddingTop="2dp"></TextView>
        </TableRow>
    </TableLayout>
    
</LinearLayout>
